syntax = "proto3";

service LDAP{
	rpc Bind(BindRequest) returns (BindResponse){}
	rpc Login(LoginRequest) returns (LoginResponse){}
	rpc Search(SearchRequest) returns (SearchResponse){}
}

message Config {
	string base_dn = 1;
	string host = 2;
	uint32 port = 3;
	bool   use_ssl = 4;
	string bind_dn = 5;
	string bind_password= 6;
	string user_filter = 7;
	string group_filter =8;
  repeated string attr =9;

}
message BindRequest{
	Config config = 1;
}
message BindResponse{}

message LoginRequest{}
message LoginResponse{}
message SearchRequest{}
message SearchResponse{}
